--- a/ch2_types_operators_expressions/Makefile
+++ b/ch2_types_operators_expressions/Makefile
@@ -1,10 +1,13 @@
 CC=gcc
 C_Flags=-Wall -Werror
 
-_ALL=ch_ex_2_1
+_ALL=ch_ex_2_1 ch_section_23
 all: $(_ALL)
 
 ch_ex_2_1: ch_ex_2_1.c
+	$(CC) -o $@ $(C_Flags) $^
+
+ch_section_23: ch_section_23.c
 	$(CC) -o $@ $(C_Flags) $^
 
 .PHONY: clean
